--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "20.4.10",
+    "aws-cdk": "2.92.0",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.92.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6"
   },
   "dependencies": {
     "aws-cdk-lib": "2.92.0",
     "constructs": "^10.0.0",
+    "esbuild": "^0.19.9",
     "source-map-support": "^0.5.21"
   }
 }
